src/app/components/section-services/section-services.component.scss
@import '../../styles/base/variables';

#section-services {
  display: flex;
  flex-direction: column;
  background: $brand-purple;
  padding-bottom: 160px;

  #services-container {
    background: white;
    display: flex;
    flex-wrap: wrap;
    padding: 30px 15px;
    position: relative;

    .text-block {
      padding: 60px 25px 25px 60px;
      position: relative;

      .icon {
        position: absolute;
        top: 0;
        left: 0;
      }

      h3 {
        font-family: $font-family-content;
        font-weight: lighter;
        letter-spacing: 2px;
        margin-bottom: 10px;
        font-size: 24px;
        text-transform: uppercase;
      }

      p {
        line-height: 1.65;
      }

      @media(min-width: $screen-md) {
        width: 50%;
      }
    }

    .icon-navigation-right {
      display: none;
      @media(min-width: $screen-md) {
        cursor: pointer;
        padding: 10px;
        display: block;
        position: absolute;
        top: -100px;
        left: 35px;
      }
    }

    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background:rgba(white, 0);
      transition: 0.2s ease all;
      z-index: 100;
    }

    &.transitioning {
      &::after {
        background:rgba(white, 0.8);
      }
    }

    @media(min-width: $screen-md) {
      padding: 55px;
    }
  }

  @media(min-width: $screen-md) {
    padding-bottom: 0;
  }
}

